--- a/EFCoreSampleXamarinForms/EFCoreSampleXamarinForms.Android/EFCoreSampleXamarinForms.Android.csproj
+++ b/EFCoreSampleXamarinForms/EFCoreSampleXamarinForms.Android/EFCoreSampleXamarinForms.Android.csproj
@@ -54,7 +54,6 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.6.0.1141" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
@@ -68,6 +67,9 @@
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidEnvironment Include="environmentvars.txt" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Tabbar.xml" />
