--- a/EFCoreSampleXamarinForms/EFCoreSampleXamarinForms/EFCoreSampleXamarinForms.csproj
+++ b/EFCoreSampleXamarinForms/EFCoreSampleXamarinForms/EFCoreSampleXamarinForms.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+	<GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
