--- a/EFCoreSampleXamarinForms/EFCoreSampleXamarinForms.Android/EFCoreSampleXamarinForms.Android.csproj
+++ b/EFCoreSampleXamarinForms/EFCoreSampleXamarinForms.Android/EFCoreSampleXamarinForms.Android.csproj
@@ -58,6 +58,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Xamarin.AndroidX.AppCompat.AppCompatResources">
+      <Version>1.2.0.6</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
